Corrigido metodo "getStarsEmoji".